# bevy-boids

./: Cargo.toml  index.html
.github/workflows/: ci.yaml  deploy-github-pages.yml
assets/: index.html
src/: boid.rs  formations.rs  horse.rs  kinematics.rs  main.rs  player.rs  resources.rs  target.rs  terrain.rs  util.rs
