[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_spatial = { git = "https://github.com/VitalyArtemiev/bevy-spatial", branch = "main" }
rand = "0.8.5"
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
#proptest may be better
