[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["trace", "trace_tracy", "trace_tracy_memory"] }
bevy_spatial = "0.7.0"
#bevy_spatial = { git = "https://github.com/VitalyArtemiev/bevy-spatial", branch = "main" }
rand = "0.8.5"
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
#proptest may be better

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable link-time optimizations for release
[profile.release]
lto = "thin"
